--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prettier"
   ],
   "dependencies": {
+    "@google-cloud/storage": "^7.6.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.37.0",
     "compression": "^1.7.4",
